Fix feedback page header gap

--- a/app/styles/base/_shame.scss
+++ b/app/styles/base/_shame.scss
@@ -84,7 +84,7 @@ body {
 }
 
 @media (max-width: 431px) {
-  body.settings-page {
+  body.settings-page, body.feedback-page {
     padding-top: 42px;
   }
 }
